--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>ReelTime - Discover, Rate & Watch</title>
+  <link rel="shortcut icon" href="" type="image/x-icon">
 
 
   <link rel="stylesheet" href="styles.css">
@@ -11,15 +12,15 @@
 <body>
   <header>
      <div class="site-left">
-      <div class="logo">RT</div>
-      <div class="site-name">ReelTime</div>
+         <div class="logo"><img src="imgs/Gemini_Generated_Image_nb4833nb4833nb48.png"></div>
+          <div class="site-name">ReelTime</div>
     </div>
 
  
     <nav class="main-nav" id="mainNav">
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="">Movies</a></li>
+        <li><a style="background-color: blueviolet;" href="index.html">Home</a></li>
+        <li><a href="movie.html">Movies</a></li>
         <li><a href="">Reviews</a></li>
         <li><a href="">Bookings</a></li>
         <li><a href="">Watchlist</a></li>
