--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </head>
 <body>
   <header>
-     <div class="site-left">
-         <div class="logo"><img src="imgs/Gemini_Generated_Image_nb4833nb4833nb48.png"></div>
-          <div class="site-name">ReelTime</div>
+        <div class="site-left">
+      <div class="logo">RT</div>
+      <div class="site-name">ReelTime</div>
     </div>
 
  
@@ -28,8 +28,12 @@
       </ul>
     </nav>
 
-    <button id="menuToggle" class="menu-toggle" title="Open menu">☰</button>
-
+   
+    <div class="hamburger" id="hamburger">
+            <span></span> <!-- Line 1 of the hamburger menu -->
+            <span></span> <!-- Line 2 of the hamburger menu -->
+            <span></span> <!-- Line 3 of the hamburger menu -->
+    </div>
     <div class="search">
     
       <input id="SearchInput" placeholder="Search movies, actors, genres..." />
