--- a/movie.html
+++ b/movie.html
@@ -30,9 +30,9 @@
     </nav>
 
      <div class="hamburger" id="hamburger">
-            <span></span> <!-- Line 1 of the hamburger menu -->
-            <span></span> <!-- Line 2 of the hamburger menu -->
-            <span></span> <!-- Line 3 of the hamburger menu -->
+            <span></span> 
+            <span></span> 
+            <span></span> 
         </div>
 
     <div class="search">
