fix the display of cards ,about,footer

--- a/about.html
+++ b/about.html
@@ -36,7 +36,10 @@
       <button>LOGIN</button>
 
     </div>
+
   </header>
+
+  <img src="imgs/for welcome page.png" alt="">
     <section class="about" id="about">
   <div class="about-container">
     <h2>About RealTime</h2>
@@ -51,5 +54,37 @@
     </p>
   </div>
 </section>
+
+
+<section class="about-section">
+  <div class="about-block">
+    <img src="imgs/badge.png" alt="Achievements Icon" class="about-icon">
+    <h3>Achievements</h3>
+    <p>We’ve launched over 100 titles, partnered with global studios, and reached millions of viewers worldwide.</p>
+  </div>
+  <div class="about-block">
+     <img src="imgs/shared-vision.png" alt="Vision Icon" class="about-icon">
+    <h3>Vision</h3>
+    <p>To become the most immersive and accessible movie platform, connecting people through stories that matter.</p>
+  
+  </div>
+  <div class="about-block">
+    <img src="imgs/mission.png" alt="Mission Icon" class="about-icon">
+    <h3>Mission</h3>
+    <p>Deliver cinematic experiences that inspire, entertain, and bring communities together — anytime, anywhere.</p>
+  
+  </div>
+  </section>
+ <footer>
+        <div class="logo">RT</div>
+        <div class="nav-desc">
+            <a href="index.html">Home</a> 
+            <a href="about.html">About Us</a> 
+            <a href="watchlist.html">Watchlist</a> 
+        
+        </div>
+       
+        <p>&#169; RealTime</p>
+    </footer>
 </body>
 </html>
