add search function

--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
     <nav class="main-nav" id="mainNav">
       <ul>
         <li><a style="background-color: blueviolet;" href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
         <li><a href="watchlist.html">Watchlist</a></li>
         <li><a href="">Bookings</a></li>
         <li><a href="">Profile</a></li>
@@ -53,6 +52,12 @@
   </header>
 
   <main>
+
+<div id="searchOverlay" class="search-overlay">
+  <div class="search-results"></div>
+</div>
+
+
 
   <div class="welcome-box" id="heroBox">
       <button class="hero-btn prev" onclick="prevImage()">&#10094;</button>
