--- a/watchlist.html
+++ b/watchlist.html
@@ -1,12 +1,18 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
-  <title>My Watchlist - ReelTime</title>
+  <meta http-equiv="Permissions-Policy" content="autoplay=(self),encrypted-media=(self)">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Watchlist</title>
+  <link rel="shortcut icon" href="" type="image/x-icon">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"> <!-- for search icon-->
   <link rel="stylesheet" href="styles.css">
+  <script src="script.js" defer></script>
 </head>
 <body>
-  <header> 
-    <div class="site-left">
+<header>
+        <div class="site-left">
       <div class="logo">RT</div>
       <div class="site-name">ReelTime</div>
     </div>
@@ -14,34 +20,57 @@
  
     <nav class="main-nav" id="mainNav">
       <ul>
-        <li><a style="background-color: blueviolet;" href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="watchlist.html">Watchlist</a></li>
+        <li><a  href="index.html">Home</a></li>
+        <li><a style="background-color: blueviolet;" href="watchlist.html">Watchlist</a></li>
         <li><a href="">Bookings</a></li>
         <li><a href="">Profile</a></li>
       </ul>
     </nav>
 
-   
+    
     <div class="hamburger" id="hamburger">
             <span></span> <!-- Line 1 of the hamburger menu -->
             <span></span> <!-- Line 2 of the hamburger menu -->
             <span></span> <!-- Line 3 of the hamburger menu -->
     </div>
+    
      <div class="search">
       <input id="SearchInput" placeholder="Search movies, actors, genres..." />
+       <button class="search-icon" id="searchToggle">
+        <i class="fa fa-search" aria-hidden="true"></i>
+
+      </button>
     </div>
 
+   
     <div class="login">
       <button>LOGIN</button>
 
     </div>
-</header>
+
+   
+  </header>
 
   <main>
     <h2 style="padding:20px;">My Watchlist</h2>
     <div id="watchlist-container" class="gallery"></div>
   </main>
+
+  
+  <footer>
+  
+    <nav class="main-nav" id="footernav">
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="watchlist.html">Watchlist</a></li>
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="">Bookings</a></li>
+        <li><a href="">Profile</a></li>
+      </ul>
+    </nav>
+    <h1>ReelTime</h1>
+    <p>&copy; ReelTime. All rights reserved.</p>
+  </footer>
 
   <script>
     const container = document.getElementById('watchlist-container');
@@ -60,5 +89,6 @@
       });
     }
   </script>
+   <script src="script.js" defer></script>
 </body>
 </html>
