bookings page i added seats

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <ul>
         <li><a style="background-color: blueviolet;" href="index.html">Home</a></li>
         <li><a href="watchlist.html">Watchlist</a></li>
-        <li><a href="">Bookings</a></li>
+        <li><a href="bookings.html">Bookings</a></li>
         <li><a href="">Profile</a></li>
       </ul>
     </nav>
