--- a/watchlist.html
+++ b/watchlist.html
@@ -22,7 +22,7 @@
       <ul>
         <li><a  href="index.html">Home</a></li>
         <li><a style="background-color: blueviolet;" href="watchlist.html">Watchlist</a></li>
-        <li><a href="">Bookings</a></li>
+        <li><a href="bookings.html">Bookings</a></li>
         <li><a href="">Profile</a></li>
       </ul>
     </nav>
