--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="watchlist.html">Watchlist</a></li>
-        <li><a href="">Bookings</a></li>
+        <li><a href="bookings.html">Bookings</a></li>
         <li><a href="">Profile</a></li>
       </ul>
     </nav>
