--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
   <link rel="shortcut icon" href="" type="image/x-icon">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"> <!-- for search icon-->
   <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="about.css">
+  
   <script src="script.js" defer></script>
 </head>
 <body>
@@ -22,9 +22,8 @@
     <nav class="main-nav" id="mainNav">
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="watchlist.html">Watchlist</a></li>
         <li><a href="bookings.html">Bookings</a></li>
-        <li><a href="">Profile</a></li>
+        <li><a href="Profile.html">Profile</a></li>
       </ul>
     </nav>
 
@@ -44,11 +43,7 @@
     </div>
 
    
-    <div class="login">
-      <button>LOGIN</button>
-
-    </div>
-
+    
    
   </header>
 
