--- a/bookings.html
+++ b/bookings.html
@@ -10,8 +10,9 @@
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="bookings.css">
   <script src="script.js" defer></script>
-  <script src="scriptJQ.js" defer></script>
-   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+ <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+   <script src="scriptJQ.js" defer></script>
+   
 </head>
 <body>
 <header>
@@ -22,10 +23,9 @@
 
     <nav class="main-nav" id="mainNav">
       <ul>
-        <li><a  href="index.html">Home</a></li>
-        <li><a href="watchlist.html">Watchlist</a></li>
-        <li><a style="background-color: blueviolet;" href="bookings.html">Bookings</a></li>
-        <li><a href="">Profile</a></li>
+       <li><a style="background-color: blueviolet;" href="index.html">Home</a></li>
+        <li><a href="bookings.html">Bookings</a></li>
+       <li><a href="profile.html">Profile</a></li>
       </ul>
     </nav>
 
