booking is done, removed the mutliple ids, trying to fix the watchlist btn to got to profile, its not done yet, try to help me fix it please

--- a/Profile.html
+++ b/Profile.html
@@ -7,8 +7,7 @@
   <title>Watchlist</title>
   <link rel="shortcut icon" href="" type="image/x-icon">
   <link rel="stylesheet" href="styles.css">
-  <script src="script.js" defer></script>
-  <script src="scriptJQ.js" defer></script>
+
 </head>
 <body>
 <header>
@@ -67,6 +66,8 @@
   </footer>
 
  
-   
+   <div id="toast" class="toast"></div>
+     <script src="script.js" defer></script>
+  <script src="scriptJQ.js" defer></script>
 </body>
 </html>
