--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
  
   <!-- for search icon-->
   <link rel="stylesheet" href="styles.css">
-  <script src="script.js" defer></script>
-  <script src="scriptJQ.js"></script>
+
 </head>
 
 <body>
@@ -103,14 +102,15 @@
     <section class="gallery" id="gallery">
       <section class="movies-cat">
         <h3>New Releases</h3>
-        <div class="movie" id="movie">
+        <div class="movie" >
 
 
 
 
           <figure class="movie-card" data-title="Jurassic World Rebirth"
             data-description="The next chapter in the Jurassic saga brings humanity back to the brink."
-            data-trailer-id="YOUR_TRAILER_ID_4">
+            data-trailer-id="YOUR_TRAILER_ID_4"
+            data-rating="4.0">
             <img src="imgs/jurrasic%20world.jpg" alt="Jurassic World Rebirth poster">
             <figcaption>Jurassic World Rebirth</figcaption>
             </figure>
@@ -118,7 +118,8 @@
 
           <figure class="movie-card" data-title="SuperMan"
             data-description="The newly imagined DC universe with a singular blend of epic action, humor and heart, delivering a Superman who's driven by compassion and an inherent belief in the goodness of humankind."
-            data-trailer-id="YOUR_TRAILER_ID_4">
+            data-trailer-id="YOUR_TRAILER_ID_4"
+            data-rating="3.5">
             <img src="imgs/superman.png" alt="SuperMan">
             <figcaption>SuperMan</figcaption>
            </figure>
@@ -127,7 +128,8 @@
 
           <figure class="movie-card" data-title="Bad Guys"
             data-description="Everyone's favorite felons are back, and this time, they've got company. In the new action-packed chapter from DreamWorks Animation's acclaimed comedy smash about a crackerjack crew of animal outlaws, the now-reformed Bad Guys are trying (very, very hard) to be good-but get hijacked into a globe-trotting heist led by a new crew they never saw coming: The Bad Girls."
-            data-trailer-id="YOUR_TRAILER_ID_4">
+            data-trailer-id="YOUR_TRAILER_ID_4"
+            data-rating="3.8">
             <img src="imgs/BadGuys.png" alt="SuberMan">
             <figcaption>Bad Guys</figcaption>
              </figure>
@@ -136,7 +138,8 @@
 
           <figure class="movie-card" data-title="Split"
             data-description="Three girls are kidnapped by a man with 24 distinct personalities."
-            data-trailer-id="YOUR_TRAILER_ID_5">
+            data-trailer-id="YOUR_TRAILER_ID_5"
+            data-rating="4.5">
             <img src="imgs/split.jpg" alt="Split poster">
             <figcaption>Split</figcaption>
              </figure>
@@ -145,7 +148,8 @@
 
           <figure class="movie-card" data-title="White Chicks"
             data-description="Two disgraced FBI agents go deep undercover as two spoiled white heiresses."
-            data-trailer-id="YOUR_TRAILER_ID_6">
+            data-trailer-id="YOUR_TRAILER_ID_6"
+            data-rating="4.9">
             <img src="imgs/white%20chicks.jpg" alt="White Chicks poster">
             <figcaption>White Chicks</figcaption>
             </figure>
@@ -153,7 +157,8 @@
 
           <figure class="movie-card" data-title="Barbie"
             data-description="To live in Barbie Land is to be a perfect being in a perfect place. Unless you have a full-on existential crisis. Or you're a Ken."
-            data-trailer-id="GRm2_FzP1m0">
+            data-trailer-id="GRm2_FzP1m0"
+            data-rating="4.6">
             <img src="imgs/barbie.jpg" alt="Barbie poster">
             <figcaption>Barbie</figcaption>
           </figure>
@@ -161,7 +166,7 @@
 
 
           <figure class="movie-card" data-title="It Ends With Us"
-            data-description="A dramatic love story based on the best-selling novel." data-trailer-id="--rV9wXzIeE">
+            data-description="A dramatic love story based on the best-selling novel." data-trailer-id="--rV9wXzIeE" data-rating="3.7">
             <img src="imgs/it-ends-with-us.jpg" alt="It Ends With Us poster">
             <figcaption>It Ends With Us</figcaption>
            </figure>
@@ -169,7 +174,7 @@
 
 
           <figure class="movie-card" data-title="The Discovery"
-            data-description="A story about the exploration of love and loss." data-trailer-id="">
+            data-description="A story about the exploration of love and loss." data-trailer-id="" data-rating="3.1">
             <img src="imgs\the discovery.jpg" alt="The Discovery poster">
             <figcaption>The Discovery</figcaption>
              </figure>
@@ -178,7 +183,7 @@
 
           <figure class="movie-card" data-title="Interstellar"
             data-description="A team of explorers travel through a wormhole in space in an attempt to ensure humanity's survival."
-            data-trailer-id="--rV9wXzIeE">
+            data-trailer-id="--rV9wXzIeE" data-rating="5.0">
             <img src="imgs/interstellar.jpg" alt="Interstellar poster">
             <figcaption>Interstellar</figcaption>
              </figure>
@@ -187,7 +192,7 @@
 
           <figure class="movie-card" data-title="Extraction 2"
             data-description="A black ops mercenary's mission to rescue a crime lord's kidnapped son uncovers a dark conspiracy."
-            data-trailer-id="">
+            data-trailer-id="" data-rating="2.9">
             <img src="imgs\extraction2.webp" alt="Extraction 2 poster">
             <figcaption>Extraction 2</figcaption>
              </figure>
@@ -196,7 +201,7 @@
 
           <figure class="movie-card" data-title="Avengers"
             data-description="Earth's mightiest heroes must come together to stop an alien invasion."
-            data-trailer-id="--rV9wXzIeE">
+            data-trailer-id="--rV9wXzIeE" data-rating="4.7">
             <img src="imgs/avengers.jpg" alt="Avengers poster">
             <figcaption>Avengers</figcaption>
            </figure>
@@ -210,64 +215,64 @@
         <div>
           <h3>Horror</h3>
         </div>
-        <div class="movie" id="movie">
+        <div class="movie" >
           <figure class="movie-card" data-title="IT"
             data-description="Seven young outcasts in Derry, Maine, are about to face their worst nightmare: an ancient, shape-shifting evil that emerges from the sewer every 27 years to feast on the town's children."
-            data-trailer-id="FnCdOQsN5ZE">
+            data-trailer-id="FnCdOQsN5ZE" data-rating="4.6">
             <img src="imgs/it.jpg" alt="IT poster">
             <figcaption>IT</figcaption>
              </figure>
           <figure class="movie-card" data-title="Truth or Dare"
-            data-description="A game of 'Truth or Dare' among friends takes a deadly turn." data-trailer-id="">
+            data-description="A game of 'Truth or Dare' among friends takes a deadly turn." data-trailer-id="" data-rating="4.9">
             <img src="imgs\truth or dare.jpg" alt="Truth or Dare poster">
             <figcaption>Truth or Dare</figcaption>
           </figure>
 
           <figure class="movie-card" data-title="the litle stranger"
             data-description="In the summer of 1948, Dr. Faraday travels to attend to a patient at Hundreds Hall, home to the Ayres family for more than two centuries. The Hall is now in decline and its inhabitants are haunted by something more ominous than a dying way of life. When he takes on his new patient, Faraday has no idea how closely, and how disturbingly, the family's story is about to become entwined with his own. Based on the book by bestselling author Sarah Waters, The Little Stranger stars Domhnall Gleeson (Ex Machina, Brooklyn) and is directed by Oscar-nominated director Lenny Abrahamson (Room)."
-             data-trailer-id="">
+             data-trailer-id="" data-rating="2.9">
             <img src="imgs/the litle stranger.png" alt="the litle stranger poster">
             <figcaption>the litle stranger</figcaption>
            </figure>
 
            <figure class="movie-card" data-title="The conjuring4"
             data-description="The Warrens return for their most chilling case yet. When a family’s home becomes plagued by relentless paranormal forces, Ed and Lorraine must confront an evil unlike anything they’ve faced before. Dark secrets, terrifying hauntings, and a fight for survival await in this spine-tingling finale to the Conjuring saga."
-             data-trailer-id="">
+             data-trailer-id="" data-rating="4.2">
             <img src="imgs\the conjuring4.jpg" alt="The Conjuring poster">
             <figcaption>The Conjuring 4</figcaption>
            </figure>
 
            <figure class="movie-card" data-title="Black Phone2"
             data-description="True evil transcends death and the black phone rings again as The Grabber torments Finn, the teen who killed him, from beyond the grave by menacing his sister Gwen. Haunted by horrific visions, the teens set out to stop their psychological torture only to uncover a disturbing secret as they confront a killer who has grown more powerful in death."
-            data-trailer-id="">
+            data-trailer-id="" data-rating="4.5">
             <img src="imgs/Black Phone2.png" alt="Black Phone2 poster">
             <figcaption>Black Phone2</figcaption>
            </figure>
 
            <figure class="movie-card" data-title="Turno nocturno"
             data-description="In the dark hallways of a hospital, the ghost of a nurse known as “La Planchada” wanders, famous for her impeccable appearance. While patients believe she is there to help them, the nurses and doctors know the truth: they must follow her rules to the letter. “Forget nothing. Do not get distracted. Do not socialize with the staff. Never fall asleep.” Rebeca, a new nurse on probation, must not only prove her worth to her superiors but also face this mysterious and feared entity."
-            data-trailer-id="">
+            data-trailer-id="" data-rating="3.7">
             <img src="imgs/Turno nocturno.png" alt="Turno nocturno poster">
             <figcaption>Turno nocturno</figcaption>
            </figure>
 
             <figure class="movie-card" data-title="The Forest"
             data-description="A young woman’s hunt for her missing sister leads to horror and madness in this terrifying supernatural thriller starring Natalie Dormer (Game of Thrones and The Hunger Games franchise). When her troubled twin sister mysteriously disappears, Sara Price (Dormer) discovers she vanished in Japan’s infamous Suicide Forest. Searching its eerie dark woods, Sara plunges into a tormented world where angry spirits lie in wait for those who ignore the warning: never stray from the path."
-            data-trailer-id="">
+            data-trailer-id="" data-rating="4.0">
             <img src="imgs/Forest.png" alt="The Forest">
             <figcaption>The Forest</figcaption>
            </figure>
 
            <figure class="movie-card" data-title="The conjuring 2"
             data-description="The supernatural thriller brings to the screen another real case from the files of renowned demonologists Ed and Lorraine Warren. Reprising their roles, Oscar nominee Vera Farmiga and Patrick Wilson star as Lorraine and Ed Warren, who, in one of their most terrifying paranormal investigations, travel to north London to help a single mother raising four children alone in a house plagued by malicious spirits."
-            data-trailer-id="">
+            data-trailer-id="" data-rating="4.4">
             <img src="imgs/the conjuring 2.png" alt="The conjuring 2">
             <figcaption>The conjuring 2</figcaption>
            </figure>
 
            <figure class="movie-card" data-title="Mirrors 2"
             data-description="After losing his fiancee in a car crash, for which he blames himself, suicidal Max Matheson reluctantly takes a job as a night watchman at his father’s Mayflower Department Store. When his co-workers are killed off in gruesome and horrible ways and Max begins to see a mysterious young woman in all the store’s mirrors, desperate to communicate with him, he fears he’s losing his mind, or that he may be the next victim."
-            data-trailer-id="">
+            data-trailer-id="" data-rating="2.5">
             <img src="imgs/Mirrors 2.png" alt="Mirrors 2">
             <figcaption>Mirrors 2</figcaption>
            </figure>
@@ -281,16 +286,16 @@
         <div>
           <h3>Action Dramas</h3>
         </div>
-        <div class="movie" id="movie">
+        <div class="movie" >
             <figure class="movie-card" data-title="One Battle After Another"
             data-description="Washed-up revolutionary Bob (Leonardo DiCaprio) exists in a state of stoned paranoia, surviving off-grid with his spirited, self-reliant daughter, Willa (Chase Infiniti). When his evil nemesis (Sean Penn) resurfaces after 16 years and she goes missing, the former radical scrambles to find her, father and daughter both battling the consequences of his past.",
-            data-trailer-id="">
+            data-trailer-id="" data-rating="2.0">
             <img src="imgs/One Battle After Another.png" alt="One Battle After Another">
             <figcaption>One Battle After Another</figcaption>
            </figure>
 
             <figure class="movie-card" data-title="Countdown"
-            data-description="A app installed among friends takes a deadly turn." data-trailer-id="--rV9wXzIeE">
+            data-description="A app installed among friends takes a deadly turn." data-trailer-id="--rV9wXzIeE" data-rating="3.0">
             <img src="imgs/countdown.jpg" alt="Countdown poster">
             <figcaption>Countdown</figcaption>
            </figure>
@@ -299,14 +304,14 @@
 
           <figure class="movie-card" data-title="Avatar"
             data-description="A marine dispatched to the moon Pandora on a unique mission becomes torn between following his orders and protecting the world he feels is his home."
-            data-trailer-id="--rV9wXzIeE">
+            data-trailer-id="--rV9wXzIeE" data-rating="5.0">
             <img src="imgs\avatar.jpg" alt="Avatar poster">
             <figcaption>Avatar</figcaption>
                </figure>
 
             <figure class="movie-card" data-title="Sovereign"
             data-description="In this tense and provocative true-crime thriller inspired by true events, a father and son who identify as sovereign citizens follow a belief system deeply rooted in distrust of government authority. The pair's view turns deadly after a police confrontation, setting off a tragic chain of events that forces a reckoning with power, principle, and the limits of freedom."
-            data-trailer-id="--rV9wXzIeE">
+            data-trailer-id="--rV9wXzIeE" data-rating="4.8">
             <img src="imgs/Sovereign.png" alt="Sovereign poster">
             <figcaption>Sovereign</figcaption>
                </figure>
@@ -359,7 +364,20 @@
     <p>&copy; ReelTime. All rights reserved.</p>
   </footer>
 
+<div id="toast" class="toast"></div>
+  <script src="script.js" defer></script>
+  <script src="scriptJQ.js"></script>
+  <script>
+document.querySelectorAll(".movie-card").forEach(card => {
+    let rating = card.dataset.rating || "N/A";
 
+    let overlay = document.createElement("span");
+    overlay.className = "rating-overlay";
+    overlay.textContent = `${rating} / 5 ★`;
+
+    card.appendChild(overlay);
+});
+</script>
 </body>
 
 </html>
