--- a/about.html
+++ b/about.html
@@ -88,10 +88,9 @@
     <nav class="main-nav" id="footernav">
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="watchlist.html">Watchlist</a></li>
         <li><a href="about.html">About Us</a></li>
-        <li><a href="">Bookings</a></li>
-        <li><a href="">Profile</a></li>
+        <li><a href="bookings.html">Bookings</a></li>
+        <li><a href="Profile.html">Profile</a></li>
       </ul>
     </nav>
     <h1>ReelTime</h1>
