--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <link rel="shortcut icon" href="" type="image/x-icon">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
- 
+  <script src="script.js" defer></script>
+  <script src="scriptJQ.js" defer></script>
+ <script src="watchlist.js" defer></script>
   <!-- for search icon-->
   <link rel="stylesheet" href="styles.css">
 
@@ -365,8 +367,7 @@
   </footer>
 
 <div id="toast" class="toast"></div>
-  <script src="script.js" defer></script>
-  <script src="scriptJQ.js"></script>
+  
   <script>
 document.querySelectorAll(".movie-card").forEach(card => {
     let rating = card.dataset.rating || "N/A";
