--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
   <header>
     <div class="site-left">
-      <div class="logo">RT</div>
+      <div class="logo">🎬</div>
       <div class="site-name">ReelTime</div>
     </div>
 
@@ -353,20 +353,53 @@
     </div>
   </div>
 
-
-  <footer>
+<footer class="cinema-footer">
+  <div class="film-strip">
+    <div class="film-perfs">
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+  </div>
   
-    <nav class="main-nav" id="footernav">
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About Us</a></li>
-        <li><a href="bookings.html">Bookings</a></li>
-        <li><a href="Profile.html">Profile</a></li>
-      </ul>
-    </nav>
-    <h1>ReelTime</h1>
-    <p>&copy; ReelTime. All rights reserved.</p>
-  </footer>
+  <div class="footer-main">
+    <div class="footer-section">
+      <div class="brand">
+        <div class="logo">🎬</div>
+        <span class="brand-name">ReelTime</span>
+      </div>
+      <p class="tagline">Where stories come to life</p>
+    </div>
+    
+    <div class="footer-nav">
+      <div class="nav-column">
+        <strong>Movies</strong>
+        <a href="#">New Releases</a>
+        <a href="#">Coming Soon</a>
+        <a href="#">Trending</a>
+      </div>
+      <div class="nav-column">
+        <strong>Experience</strong>
+        <a href="#">Theaters</a>
+        <a href="#">Premium</a>
+        <a href="#">3D</a>
+      </div>
+      <div class="nav-column">
+        <strong>Company</strong>
+        <a href="about.html">About</a>
+        <a href="#">Careers</a>
+        <a href="#">Press</a>
+      </div>
+    </div>
+  </div>
+  
+  <div class="footer-credits">
+    <p>Made with ❤️ for movie lovers</p>
+    <p>&copy; 2024 ReelTime Cinemas</p>
+  </div>
+</footer>
 
 <div id="toast" class="toast"></div>
   <script src="script.js" defer></script>
